--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5434/shareit
+spring.datasource.username=kitty
+spring.datasource.password=purrrrrr
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 logging.level.org.springframework.orm.jpa=INFO
